# eggclip

./: .gitignore  AGENTS.md  DESKTOP_DEVELOPMENT_TODO.md  HARMONY_DEVELOPMENT_TODO.md  LICENSE  README.md
.claude/handoffs/: 2026-06-20-182235-eggclip-desktop-localhost-fix.md  2026-06-20-214920-eggclip-two-sides-layering.md  2026-06-21-104915-eggclip-h1-d1-poc-stabilized.md  2026-06-21-122354-eggclip-mdns-poc-and-emulator-findings.md  2026-06-21-201850-eggclip-d1-h1-poc-boundary-hardening.md  2026-06-24-000816-eggclip-poc-privacy-and-frame-diagnostics.md  2026-06-27-085426-eggclip-protocol-v1-arkts-rust.md  2026-06-27-195423-eggclip-authenticated-transport-session.md  2026-06-27-220601-eggclip-local-clipboard-persistence.md  2026-06-28-100926-eggclip-post-commit-broadcast.md  2026-06-28-141203-eggclip-ui-navigation-settings.md  2026-06-28-155336-eggclip-ui-polish.md  2026-06-28-174850-eggclip-history-metadata-preview.md  2026-06-28-193205-eggclip-local-history-capture.md  2026-06-28-223118-eggclip-lan-diagnostics.md  2026-06-30-094921-eggclip-empty-privacy-network-troubleshooting.md  2026-06-30-115608-eggclip-recent-endpoint-history-clear.md  2026-07-04-163315-eggclip-harmony-pairing-invite-import.md  2026-07-04-205538-eggclip-pairing-invitation-validation.md  (+21 more)
desktop/: README.md  package.json  pnpm-lock.yaml  vite.config.js
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_error.rs  commands.rs  history.rs  i18n.rs  identity.rs  lib.rs  main.rs  panel_position.rs  secret_store.rs  tray.rs
desktop/src-tauri/src/clipboard/: mod.rs
desktop/src-tauri/src/crypto/: mod.rs
desktop/src-tauri/src/discovery/: mod.rs
desktop/src-tauri/src/pairing/: client.rs  client_handshake.rs  client_join.rs  join_runtime.rs  mod.rs
desktop/src-tauri/src/protocol/: mod.rs
desktop/src-tauri/src/settings/: mod.rs
desktop/src-tauri/src/storage/: mod.rs  repositories.rs
desktop/src-tauri/src/sync/: mod.rs
desktop/src-tauri/src/transport/: mod.rs  outbound.rs  reconnect.rs  session.rs
docs/: 20260713鸿蒙上架审核整改ROADMAP.md  20260713鸿蒙上架审核整改方案.md  APPGALLERY_PRIVACY_LABEL_CHECKLIST.md  EggClip最佳实现方案.md  LAN_TROUBLESHOOTING.md  MANUAL_REGRESSION.md  PRIVACY.md  PRIVACY_DATA_INVENTORY.md  RELEASE.md  UI_REFINEMENT_ROADMAP.md  Windows客户端互联剪贴板ROADMAP.md  Windows客户端互联剪贴板实现方案.md  双端国际化ROADMAP.md  双端国际化实现方案.md
harmony/: .editorconfig  .gitignore  README.md  build-profile.json5  oh-package.json5
protocol/: README.md  v1.schema.json
scripts/: build-desktop-release.ps1  build-harmony-release.ps1  check-harmony-color-contrast.ps1  check-harmony-log-privacy.ps1  check-harmony-market-icon.ps1  check-harmony-navigation-layout.ps1  check-i18n.ps1  release-safety-check.ps1  sanitize-harmony-build-profile.ps1  validate-i18n-foundation.mjs  verify-release-metadata.ps1
(+164 files in other folders)
