[package]
name = "eggclip"
version = "0.1.0"
description = "EggClip LAN clipboard desktop application"
authors = ["EggClip Contributors"]
edition = "2021"
rust-version = "1.85"
license = "MIT"
default-run = "eggclip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eggclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
aes-gcm = "0.10"
base64 = "0.22"
clipboard-win = { version = "5.4.1", features = ["monitor"] }
ed25519-dalek = "2.1"
futures-util = "0.3"
getrandom = "0.2"
hkdf = "0.12"
hmac = "0.12"
if-addrs = "0.15"
mdns-sd = { version = "0.20", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.26"
uuid = { version = "1.23.3", features = ["serde", "v4", "v7"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
